
    o	[[<-.data.frame checked if a replacment was too short, but not
	if it was too long.  (related to PR#3229)

    o	qt(x, df) was quite inaccurate for df=1+epsilon; it is now much more
	accurate for df in (1,2) and more precise for other df. (PR#2991)

    o	qbeta() now has slightly improved C code in two places, as suggested
	in the 2nd followup to PR#2894.



		CHANGES IN R VERSION 1.7.0


USER-VISIBLE CHANGES

    o	solve(), chol(), eigen() and svd() now use LAPACK routines
	unless a new back-compatibility option is turned on.  The
	signs and normalization of eigen/singular vectors may change
	from earlier versions.

    o	The `methods', `modreg', `mva', `nls' and `ts' packages
	are now attached by default at startup (in addition to `ctest').
	The option "defaultPackages" has been added which contains the
	initial list of packages.  See ?Startup and ?options for details.
	Note that .First() is no longer used by R itself.

	class() now always (not just when `methods' is attached) gives
	a non-null class, and UseMethod() always dispatches on the
	class that class() returns.  This means that methods like
	foo.matrix and foo.integer will be used.  Functions oldClass()
	and oldClass<-() get and set the "class" attribute as R
	without `methods' used to.

    o	The default random number generators have been changed to
	`Mersenne-Twister' and `Inversion'.  A new RNGversion()
	function allows you to restore the generators of an earlier R
	version if reproducibility is required.

    o	Namespaces can now be defined for packages other than `base':
	see `Writing R Extensions'.  This hides some internal objects
	and changes the search path from objects in a namespace.  All
	the base packages (except methods and tcltk) have namespaces,
	as well as the recommended packages `KernSmooth', `MASS',
	`boot', `class', `nnet', `rpart' and `spatial'.

    o	Formulae are not longer automatically simplified when terms()
	is called, so the formulae in results may still be in the